# Programming-Workshop-in---C---C--

./: .gitattributes  README.md
Exams/: SpreaderDetectorBackend.c
Exams/C/: README  README - Copy.txt  SpreaderDetectorBackend.c  cheat sheet.txt  exam.tar  in-out-example.tar  הצהרת טוהר בחינות.docx
Exams/C/SpreaderDetectorBackend/: CMakeLists.txt  SpreaderDetectorBackend.c  SpreaderDetectorParams.h
Exams/C/in-out-example/: SpreaderDetectorAnalysis.out  SpreaderDetectorBackend.exe.stackdump
Exams/CPP/: Makefile  VLVector.hpp  exam.tar  presubmit.tar
Exams/CPP/VLVector/: CMakeLists.txt  Presubmit.hpp  VLVector.cpp  VLVector.hpp  exam.tar  main.cpp
Exercises/: Code Style.xml
Exercises/Ex5/: RecommenderSystem.cpp  RecommenderSystem.h  ex5.tar
Exercises/Ex5/Ex5 files-20200627/: ranks_matrix.txt
Exercises/Ex5/Ex5Project/: CMakeLists.txt  RecommenderSystem.cpp  main.cpp
Exercises/Ex5/ex5/: RecommenderSystem.h
Exercises/Exercise 1/: ex.rar  ex1.tar  links.txt  manageStudents.c  מקרי בדיקהו כו.txt
Exercises/Exercise 1/Ex1/: CMakeLists.txt  ex1.tar  main.c  manageStudents.c
Exercises/Exercise 2/: 1 (2).txt  CMakeLists.txt  RailWayPlanner.c  dup.txt  ex2.tar  main.c  shortcuts.txt  t.txt  הערות נוספות.txt  לזכור.txt
Exercises/Exercise 2/RailWayPlannerTests/: main.py
Exercises/Exercise 2/io/: RailWayPlanner.c
Exercises/Exercise 3/: CMakeLists.txt  RBTree.c  RBTree.h  Structs.c  c_ex3.tar
Exercises/Exercise 3/Q6/: CMakeLists.txt  (+1 more)
Exercises/Exercise 4/: cpp_ex4.tar
Exercises/Lab3CPP/: 2.txt  3.txt  CMakeLists.txt  main.cpp
Exercises/lab6/: main.c
(+74 files in other folders)
